salesforce-sandbox/force-app/main/default/objects/Bandeja_Contable_Archivo__c/Bandeja_Contable_Archivo__c.object-meta.xml
<CustomObject>
    <description>Un archivo de una Bandeja Contable. El archivo está en Google Cloud Storage (GCS_ruta__c) y su registro en Cloud SQL (Google_Id__c); aquí se guarda el seguimiento de la subida.</description>
    <label>Archivo de Bandeja Contable</label>
    <nameField>
        <displayFormat>BCA-{000000}</displayFormat>
        <label>Nº archivo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Archivos de Bandeja Contable</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>