salesforce-sandbox/force-app/main/default/objects/Bandeja_Contable_Archivo__c/fields/Bandeja__c.field-meta.xml
<CustomField>
    <fullName>Bandeja__c</fullName>
    <label>Bandeja</label>
    <referenceTo>Bandeja_Contable__c</referenceTo>
    <relationshipLabel>Archivos</relationshipLabel>
    <relationshipName>Archivos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>