salesforce-sandbox/force-app/main/default/objects/Bandeja_Contable_Archivo__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <description>Pendiente: registrado en Salesforce. Subiendo: sesión de subida creada. Subido: el archivo está en Cloud Storage pero Google aún no lo ha confirmado (se reintenta en cola). Sincronizado: registrado en Cloud SQL. Error: fallo definitivo (ver Ultimo_error__c).</description>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente</fullName>
                <default>true</default>
                <label>Pendiente</label>
            </value>
            <value>
                <fullName>Subiendo</fullName>
            </value>
            <value>
                <fullName>Subido</fullName>
            </value>
            <value>
                <fullName>Sincronizado</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>