salesforce-sandbox/force-app/main/default/objects/Bandeja_Contable_Archivo__c/fields/GCS_ruta__c.field-meta.xml
<CustomField>
    <fullName>GCS_ruta__c</fullName>
    <description>Ruta del objeto en el bucket: {orgId}/{CIF}/{bandejaId}/{archivoId}/{nombre}.</description>
    <label>Ruta en Cloud Storage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>