salesforce-sandbox/force-app/main/default/objects/Bandeja_Contable_Archivo__c/fields/Google_Id__c.field-meta.xml
<CustomField>
    <fullName>Google_Id__c</fullName>
    <description>Id del archivo en Cloud SQL (tabla archivos). Se rellena al confirmar la subida.</description>
    <label>Id en Google</label>
    <length>255</length>
    <type>Text</type>
</CustomField>