salesforce-sandbox/force-app/main/default/objects/Bandeja_Contable_Archivo__c/fields/Intentos__c.field-meta.xml
<CustomField>
    <fullName>Intentos__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Intentos de confirmación en Google que han fallado.</description>
    <label>Intentos</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>