salesforce-sandbox/force-app/main/default/objects/Bandeja_Contable_Archivo__c/fields/Nombre__c.field-meta.xml
<CustomField>
    <fullName>Nombre__c</fullName>
    <description>Nombre original del archivo tal como lo adjuntó el usuario.</description>
    <label>Nombre del archivo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>