salesforce-sandbox/force-app/main/default/objects/Bandeja_Contable_Archivo__c/fields/Tamano__c.field-meta.xml
<CustomField>
    <fullName>Tamano__c</fullName>
    <label>Tamaño (bytes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>