salesforce-sandbox/force-app/main/default/objects/Bandeja_Contable_Archivo__c/fields/Tipo_mime__c.field-meta.xml
<CustomField>
    <fullName>Tipo_mime__c</fullName>
    <label>Tipo (MIME)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>